tests/baselines/reference/computedPropertyNames30_ES5.errors.txt
tests/cases/conformance/es6/computedProperties/computedPropertyNames30_ES5.ts(11,19): error TS2466: 'super' cannot be referenced in a computed property name.


==== tests/cases/conformance/es6/computedProperties/computedPropertyNames30_ES5.ts (1 errors) ====
    class Base {
    }
    class C extends Base {
        constructor() {
            super();
            () => {
                var obj = {
                    // Ideally, we would capture this. But the reference is
                    // illegal, and not capturing this is consistent with
                    //treatment of other similar violations.
                    [(super(), "prop")]() { }
                      ~~~~~
!!! error TS2466: 'super' cannot be referenced in a computed property name.
                };
            }
        }
    }